--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Toastify {
+  .Toastify__toast-container--top-center{
+    width: 100%;
+    top: 0;
+    padding: 0;
+    margin: 0;
+
+    .Toasty__toast--success{}
+  }
+}
